hard-gists/f6effc4468cca6f4e8f0/run.log
=== Docker Run Log for f6effc4468cca6f4e8f0 ===
Started at: Mi 29. Okt 21:28:57 CET 2025

[2025-10-29 21:28:57] START: Running container for f6effc4468cca6f4e8f0
[2025-10-29 21:28:58] SUCCESS: Container 4d7ac06a907a8d7cbf3809988b7c4bd4965a79763e75a395857a3c7f6c3a4989 started for f6effc4468cca6f4e8f0
=== Container logs for f6effc4468cca6f4e8f0 ===
  File "/snippet.py", line 15
    print 'recv: ', data
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f6effc4468cca6f4e8f0 ===
[2025-10-29 21:29:00] INFO: Container 4d7ac06a907a8d7cbf3809988b7c4bd4965a79763e75a395857a3c7f6c3a4989 has stopped
